@@ -1,4 +1,6 @@
 Changes for 1.3.3.0
+* Finished work on making triggers for rules and trigger attachments, using attachmentToBeChangedName and attachmentToBeChangedProperty. (veqryn)
+
 * Preliminary work on making new triggers for rules attachments, and fixing issue with clearing properties without setting. (veqryn)
 
 * Created new triggers for changing player attachments, using players and playerProperty. (veqryn)
